初始化项目

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/FetchData.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/FetchData.razor
@@ -1,6 +1,6 @@
 ﻿@page "/fetchdata"
 
-@using FOPS.Data
+@using FOPS.Blazor.Data
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
