--- a/01_UserInterface（前端界面）/FOPS.Blazor/_Imports.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using FOPS
-@using FOPS.Shared
+@using FOPS.Blazor
+@using FOPS.Blazor.Shared
