完成任务组列表

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -28,7 +28,7 @@
                 </a>
                 <dl class="layui-nav-child">
                     <dd data-name="grid">
-                        <NavLink class="nav-link" href="javascript:;" lay-href="/fss/task_group/list" Match="NavLinkMatch.All">
+                        <NavLink class="nav-link" href="/fss/task_group/list" Match="NavLinkMatch.All">
                             任务组
                         </NavLink>
                     </dd>
