--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/List.razor
@@ -1,2 +1,143 @@
 @page "/fss/task_group/list"
-aaa
+@page "/fss/task_group/list/{pageIndex:int}"
+@using FOPS.Abstract.Fss.Server
+@using FOPS.Abstract.Fss.Entity
+@using FS.Extends
+@inject IIocManager _iocManager;
+<div class="layui-fluid">
+    <div class="layui-card">
+        <div class="layui-card-header" id="anchor-play-header">
+            玩法模型
+            <div class="layui-right">
+                <button class="layui-btn layui-btn-right" data-popup="anchor/play-info" data-area="md"><i class="am-icon-plus"></i> 添加玩法</button>
+                <button class="layui-btn layui-btn-right am-icon-refresh" data-action="anchor/template/play/refreshcache"></button>
+            </div>
+        </div>
+        <div class="layui-card-body">
+            <div class="layui-form layui-border-box layui-table-view" lay-filter="LAY-table-1" style=" ">
+                <div class="layui-table-box">
+                    <div class="layui-table-header">
+                        <table cellspacing="0" cellpadding="0" border="0" class="layui-table" lay-skin="auto" lay-size="sm">
+                            <thead>
+                            <tr>
+                                <th data-field="ID" data-key="14-0-0" class="">
+                                    <div class="layui-table-cell laytable-cell-14-0-0">
+                                        <span>组ID</span>
+                                    </div>
+                                </th>
+                                <th data-field="Type" data-key="14-0-1" class="">
+                                    <div class="layui-table-cell laytable-cell-14-0-1">
+                                        <span>任务ID</span>
+                                    </div>
+                                </th>
+                                <th data-field="Title" data-key="14-0-2" class="">
+                                    <div class="layui-table-cell laytable-cell-14-0-2">
+                                        <span>任务标题</span>
+                                    </div>
+                                </th>
+                                <th data-field="Games" data-key="14-0-3" class="">
+                                    <div class="layui-table-cell laytable-cell-14-0-3">
+                                        <span>下次执行</span>
+                                    </div>
+                                </th>
+                                <th data-field="Games" data-key="14-0-4" class="">
+                                    <div class="layui-table-cell laytable-cell-14-0-4">
+                                        <span>计划设置</span>
+                                    </div>
+                                </th>
+                                <th data-field="Games" data-key="14-0-5" class="">
+                                    <div class="layui-table-cell laytable-cell-14-0-5">
+                                        <span>活动时间</span>
+                                    </div>
+                                </th>
+                                <th data-field="Games" data-key="14-0-6" class="">
+                                    <div class="layui-table-cell laytable-cell-14-0-6">
+                                        <span>上次完成</span>
+                                    </div>
+                                </th>
+                                <th data-field="Games" data-key="14-0-7" class="">
+                                    <div class="layui-table-cell laytable-cell-14-0-7">
+                                        <span>平均耗时</span>
+                                    </div>
+                                </th>
+                                <th data-field="Games" data-key="14-0-8" class="">
+                                    <div class="layui-table-cell laytable-cell-14-0-8">
+                                        <span>运行次数</span>
+                                    </div>
+                                </th>
+                            </tr>
+                            </thead>
+                        </table>
+                    </div>
+                    <div class="layui-table-body layui-table-main">
+                        <table cellspacing="0" cellpadding="0" border="0" class="layui-table" lay-skin="auto" lay-size="sm">
+                            <tbody>
+                            @for (var index = 0; index < _lst.Count; index++)
+                            {
+                                var taskGroupVO = _lst[index];
+                                <tr data-index="@index" class="">
+                                    <td class="">
+                                        <div class="layui-table-cell laytable-cell-14-0-0">@taskGroupVO.Id</div>
+                                    </td>
+                                    <td data-field="Type" data-key="14-0-1" class="">
+                                        <div class="layui-table-cell laytable-cell-14-0-1">@taskGroupVO.TaskId</div>
+                                    </td>
+                                    <td data-field="Title" data-key="14-0-2" class="">
+                                        <div class="layui-table-cell laytable-cell-14-0-2">@taskGroupVO.Caption</div>
+                                    </td>
+                                    <td data-field="Items" data-key="14-0-3" class="">
+                                        <div class="layui-table-cell laytable-cell-14-0-3">@taskGroupVO.NextAt.ToString("yyyy-MM-dd HH:mm:ss")</div>
+                                    </td>
+                                    <td data-field="Games" data-key="14-0-4" class="">
+                                        <div class="layui-table-cell laytable-cell-14-0-4">@taskGroupVO.Cron</div>
+                                    </td>
+                                    <td data-field="Games" data-key="14-0-5" class="">
+                                        <div class="layui-table-cell laytable-cell-14-0-5">@taskGroupVO.ActivateAt.ToString("yyyy-MM-dd HH:mm:ss")</div>
+                                    </td>
+                                    <td data-field="Games" data-key="14-0-6" class="">
+                                        <div class="layui-table-cell laytable-cell-14-0-6">@taskGroupVO.LastRunAt.ToString("yyyy-MM-dd HH:mm:ss")</div>
+                                    </td>
+                                    <td data-field="Games" data-key="14-0-7">
+                                        <div class="layui-table-cell laytable-cell-14-0-7">@taskGroupVO.RunSpeedAvg</div>
+                                    </td>
+                                    <td data-field="Games" data-key="14-0-8">
+                                        <div class="layui-table-cell laytable-cell-14-0-8">@taskGroupVO.RunCount</div>
+                                    </td>
+                                </tr>
+                            }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <PageSplit PageIndex="@PageIndex" PageSize="@_pageSize" TotalCount="@_totalCount" PageUrl="/fss/task_group/list/{index}"></PageSplit>
+                <style>
+    .laytable-cell-14-0-0{ width: 80px; }
+    .laytable-cell-14-0-1{ width: 100px; }
+    .laytable-cell-14-0-2{ width: 200px; }
+    .laytable-cell-14-0-3{ width: 150px; }
+    .laytable-cell-14-0-4{ width: 150px; }
+    .laytable-cell-14-0-5{ width: 150px; }
+    .laytable-cell-14-0-6{ width: 150px; }
+    .laytable-cell-14-0-7{ width: 80px; }
+    .laytable-cell-14-0-8{ width: 80px; }
+    </style>
+            </div>
+        </div>
+    </div>
+</div>
+
+@code{
+
+    [Parameter] public int PageIndex { get; set; }
+    private int _totalCount;
+    private int _pageSize = 20;
+
+    private List<TaskGroupVO> _lst = new();
+
+    protected override async Task OnParametersSetAsync()
+    {
+        _lst = await _iocManager.Resolve<ITaskGroupList>().ToListAsync();
+        _totalCount = _lst.Count;
+        _lst = _lst.ToList(_pageSize, PageIndex);
+    }
+}
