--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -33,10 +33,14 @@
                         </NavLink>
                     </dd>
                     <dd data-name="button">
-                        <a lay-href="component/button/index.html">服务端节点</a>
+                        <NavLink class="nav-link" href="/fss/node/list" Match="NavLinkMatch.All">
+                            服务端节点
+                        </NavLink>
                     </dd>
                     <dd data-name="form">
-                        <a href="javascript:;">客户端列表</a>
+                        <NavLink class="nav-link" href="/fss/client/list" Match="NavLinkMatch.All">
+                            客户端列表
+                        </NavLink>
                     </dd>
                 </dl>
             </li>
