完成任务的添加、修改操作

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/MainLayout.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/MainLayout.razor
@@ -40,10 +40,12 @@
 
         <!-- 主体内容 -->
         <div class="layui-body" id="LAY_app_body">
-        <div class="layadmin-tabsbody-item"></div>
+            <div class="layadmin-tabsbody-item"></div>
             <div class="layadmin-tabsbody-item layui-show">
                 @* <iframe src="/main" frameborder="0" class="layadmin-iframe"></iframe> *@
-                @Body
+                <div class="layui-fluid">
+                    @Body
+                </div>
             </div>
         </div>
 
