--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/_Host.cshtml
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/_Host.cshtml
@@ -21,6 +21,7 @@
 <body class="layui-layout-body">
 <component type="typeof(App)" render-mode="ServerPrerendered"/>
 <script src="/layuiadmin/layui/layui.js"></script>
+<script src="/layuiadmin/layui/layui.extend.js"></script>
 <script>
   layui.config({
     base: '/layuiadmin/' //静态资源所在路径
