--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/MainLayout.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/MainLayout.razor
@@ -40,9 +40,8 @@
 
         <!-- 主体内容 -->
         <div class="layui-body" id="LAY_app_body">
-            <div class="layadmin-tabsbody-item"></div>
+            @* <div class="layadmin-tabsbody-item"></div> *@
             <div class="layadmin-tabsbody-item layui-show">
-                @* <iframe src="/main" frameborder="0" class="layadmin-iframe"></iframe> *@
                 <div class="layui-fluid">
                     @Body
                 </div>
