--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/_Host.cshtml
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/_Host.cshtml
@@ -1,6 +1,8 @@
 ﻿@page "/"
+@using Microsoft.JSInterop
 @namespace FOPS.Blazor.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
 @{
     Layout = null;
 }
@@ -8,27 +10,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>星云 V1</title>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="/layuiadmin/layui/css/layui.css" media="all">
-    <link rel="stylesheet" href="/layuiadmin/layui/css/layui.extend.css" media="all">
-    <link rel="stylesheet" href="/layuiadmin/style/admin.css" media="all">
-    <base href="~/"/>
+  <meta charset="utf-8">
+  <title>星云 V1</title>
+  <meta name="renderer" content="webkit">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <link rel="stylesheet" href="/layuiadmin/layui/css/layui.css" media="all">
+  <link rel="stylesheet" href="/layuiadmin/layui/css/layui.extend.css" media="all">
+  <link rel="stylesheet" href="/layuiadmin/style/admin.css" media="all">
+  <base href="~/"/>
 </head>
 <body class="layui-layout-body">
 <component type="typeof(App)" render-mode="ServerPrerendered"/>
+<script src="/_framework/blazor.server.js"></script>
 <script src="/layuiadmin/layui/layui.js"></script>
 <script src="/layuiadmin/layui/layui.extend.js"></script>
-<script>
+<script type="text/javascript">
+function InitLayui(){ 
   layui.config({
     base: '/layuiadmin/' //静态资源所在路径
   }).extend({
     index: 'lib/index' //主入口模块
   }).use('index');
+};
   </script>
-<script src="/_framework/blazor.server.js"></script>
 </body>
 </html>
