--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Update.razor
@@ -11,7 +11,7 @@
             <div class="layui-card-header">
                 基础信息
                 <div class="layui-right">
-                    <button class="layui-btn" onclick="location.href='/fss/task_group/list'"><i class="am-icon-plus"></i> 列表</button>
+                    <button class="layui-btn"  @onclick="GotoList"><i class="am-icon-plus"></i> 列表</button>
                 </div>
             </div>
             <div class="layui-card-body layui-row layui-col-space10">
@@ -152,6 +152,11 @@
             }
             if (string.IsNullOrWhiteSpace(_info.Cron)) _info.Cron = _info.IntervalMs.ToString();
         }
+    }
+    
+    private void GotoList()
+    {
+        nav.NavigateTo("/fss/task_group/list");
     }
 
 }
