--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -105,10 +105,10 @@
                 </a>
                 <dl class="layui-nav-child">
                     <dd>
-                        <a href="javascript:;">项目设置</a>
+                        <NavLink href="/project/list">项目设置</NavLink>
                     </dd>
                     <dd>
-                        <a href="javascript:;">Git设置</a>
+                        <NavLink href="/git/list">Git设置</NavLink>
                     </dd>
                     <dd>
                         <a href="javascript:;">管理员设置</a>
