--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -19,7 +19,7 @@
                         </NavLink>
                     </dd>
                     <dd data-name="event">
-                        <NavLink lay-href="home/homepage1.html">事件</NavLink>
+                        <NavLink href="home/homepage1.html">事件</NavLink>
                     </dd>
                 </dl>
             </li>
@@ -53,13 +53,13 @@
                 </a>
                 <dl class="layui-nav-child">
                     <dd>
-                        <NavLink lay-href="template/personalpage.html">集群管理</NavLink>
+                        <NavLink href="template/personalpage.html">集群管理</NavLink>
                     </dd>
                     <dd>
                         <NavLink href="/k8s/tpl/list">yaml模板</NavLink>
                     </dd>
                     <dd>
-                        <NavLink lay-href="template/goodslist.html">发布yaml</NavLink>
+                        <NavLink href="/k8s/deploy/list">发布yaml</NavLink>
                     </dd>
                 </dl>
             </li>
@@ -84,7 +84,7 @@
                         <a href="javascript:;">Stream队列</a>
                         <dl class="layui-nav-child">
                             <dd>
-                                <NavLink lay-href="set/system/website.html">队列列表</NavLink>
+                                <NavLink href="set/system/website.html">队列列表</NavLink>
                             </dd>
                         </dl>
                     </dd>
@@ -92,7 +92,7 @@
                         <a href="javascript:;">Git设置</a>
                         <dl class="layui-nav-child">
                             <dd>
-                                <NavLink lay-href="set/user/info.html">我的Git</NavLink>
+                                <NavLink href="set/user/info.html">我的Git</NavLink>
                             </dd>
                         </dl>
                     </dd>
@@ -114,10 +114,10 @@
                         <a href="javascript:;">管理员设置</a>
                         <dl class="layui-nav-child">
                             <dd>
-                                <NavLink lay-href="set/user/info.html">管理员列表</NavLink>
+                                <NavLink href="set/user/info.html">管理员列表</NavLink>
                             </dd>
                             <dd>
-                                <NavLink lay-href="set/user/password.html">修改密码</NavLink>
+                                <NavLink href="set/user/password.html">修改密码</NavLink>
                             </dd>
                         </dl>
                     </dd>
